[tool.poetry]
name = "redis-24"
version = "0.1.0"
description = ""
authors = ["iamkumarpratik <kr.pratik@ymail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
